# aether-band-engine

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_V2.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  railway.toml
.github/workflows/: ci.yml  release.yml
deploy/: README.md
deploy/aws/: main.tf
deploy/gcp/: main.tf
deploy/helm/aether-engine/: Chart.yaml  values.yaml
deploy/helm/aether-engine/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/k8s/: api-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/observability/: grafana-dashboard.json  jaeger.yaml  prometheus-rules.yaml  prometheus.yaml  servicemonitor.yaml
docs/: API.md  ARCHITECTURE.md
docs/specs/: VOICE_SYNTHESIS_SPEC.md
frontend/: .env.check  .env.example  .env.production  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/voices/: page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/lib/: api.ts
src/aether/: __init__.py  __main__.py  cli.py  config.py
src/aether/agents/: __init__.py  arrangement.py  base.py  composition.py  creative_director.py  lyrics.py  mastering.py  mixing.py  qa.py  release.py  sound_design.py  vocal.py
src/aether/api/: __init__.py  app.py  auth.py  rate_limit.py  ratelimit.py
src/aether/audio/: __init__.py  dsp.py  io.py  mastering.py  mixer.py  mixing.py
src/aether/core/: __init__.py  exceptions.py  health.py  logging.py  metrics.py  resilience.py  runtime.py
src/aether/enterprise/: __init__.py  audit.py  compliance.py  sso.py
src/aether/genre/: __init__.py  conditioner.py  detection.py  dna.py  harmony.py  metrics.py  motif.py  rhythm.py
src/aether/knowledge/: __init__.py  genres.py  instruments.py  melody_expert.py  orchestration.py  percussion.py  theory.py
src/aether/orchestration/: __init__.py  pipeline.py  workflow.py
src/aether/providers/: __init__.py  audio.py  base.py  edge_tts.py  elevenlabs.py  embedding.py  flstudio.py  genre_patterns.py  llm.py  manager.py  midi.py  retry.py
src/aether/providers/selfhosted/: __init__.py  bark.py  config.py  provider.py  rvc.py  xtts.py  xtts_subprocess.py
src/aether/qa/: __init__.py  agent.py  authenticity.py  originality.py  reports.py  technical.py
src/aether/rendering/: __init__.py  engine.py
src/aether/schemas/: __init__.py  arrangement.py  base.py  genre.py  harmony.py  lyrics.py  master.py  melody.py  mix.py  qa.py  rhythm.py  song.py  sound_design.py  vocal.py
src/aether/storage/: __init__.py  artifacts.py
src/aether/voice/: __init__.py  preview.py
src/aether/voice/arrangement/: __init__.py  harmony.py  layers.py  safeguards.py
src/aether/voice/engine/: __init__.py  aligner.py  breath.py  pitch.py  singing_synth.py  synthesizer.py  transitions.py  vibrato.py  vocal_synth.py
src/aether/voice/identity/: __init__.py  blueprint.py  drift_monitor.py  invariants.py
src/aether/voice/integration/: __init__.py  api.py  pipeline.py
src/aether/voice/performance/: __init__.py  expression.py  ornamentation.py  profiles.py
src/aether/voice/phonetics/: __init__.py  bilingual.py  english.py  prosody.py  spanish.py
src/aether/voice/quality/: __init__.py  evaluator.py  metrics.py  thresholds.py
tests/: conftest.py  test_voice.py
tests/integration/: test_pipeline.py  test_providers.py
tests/unit/: test_agents.py  test_core_exceptions.py  test_core_resilience.py  test_security.py
