[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aether-band-engine"
version = "0.1.0"
description = "Autonomous Ensemble for Thoughtful Harmonic Expression and Rendering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AETHER Team" }
]
keywords = ["ai", "music", "generation", "production", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "rich>=13.0",

    # Audio Processing
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
    "mido>=1.3",

    # Utils
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Professional audio encoding (MP3, effects processing)
audio = [
    "pedalboard>=0.8",  # Spotify's audio library - built-in MP3 encoder
    "pydub>=0.25",      # Fallback MP3 via ffmpeg
    "lameenc>=1.4",     # Direct LAME bindings
]

# Machine learning dependencies (heavy, ~500MB)
ml = [
    "sentence-transformers>=2.2",
    "librosa>=0.10",
]

# LLM provider SDKs
llm = [
    "anthropic>=0.18",
    "openai>=1.0",
]

# API server dependencies
api = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "httpx>=0.26",
    "pyjwt>=2.8",
    "redis>=5.0",
]

# Full installation with all features
full = [
    "aether-band-engine[audio,ml,llm,api]",
]

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
aether = "aether.cli:main"

[project.urls]
Homepage = "https://github.com/aether-band-engine"
Documentation = "https://github.com/aether-band-engine/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/aether"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
